test/corpus/assignment.txt
==================
Assignment
==================
let a = 42
---
(program
    (statement
        (expression
            (assignment
                (identifier)
                (expression
                    (value
                        (number)
                    ))
            )
        )
    )
)
