test/corpus/hello_world.txt
==================
Hello World
==================
puts 42
---
(program
    (statement
        (expression
            (function_call
                (identifier)
                (expression
                    (value
                        (int)
                    ))
            )
        )
    )
)
